<resources>
    <string name="app_name">InformationRecognize</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="ban_chua_nhap_ten_dang_nhap">Bạn chưa nhập tên đăng nhập</string>
    <string name="ban_chua_nhap_mat_khau">Bạn chưa nhập mật khẩu</string>
    <string name="doi_mat_khau">Đổi mật khẩu</string>
    <string name="nhap_mat_khau_cu">Nhập mật khẩu hiện tại</string>
    <string name="nhap_mat_khau_moi">Nhập mật khẩu mới</string>
    <string name="nhap_lai_mat_khau_moi">Nhập lại mật khẩu mới</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="diem_danh_sinh_vien_tlu">Điểm danh sinh viên</string>
    <string name="dai_hoc_thuy_loi">Đại học Thủy Lợi</string>
    <string name="dang_nhap_tai_khoan">Đăng nhập tài khoản</string>
    <string name="thong_tin_phong_thi">Thông tin phòng thi</string>
    <string name="dang_cho">Đang chờ</string>
    <string name="si_so">Sĩ số: </string>
    <string name="thoi_gian_thi">Thời gian thi</string>
    <string name="thoi_gian_bat_dau">Thời gian bắt đầu:</string>
    <string name="danh_sach_phong_thi">Danh sách phòng thi</string>
    <string name="da_co_loi_xay_ra">Đã có lỗi sảy ra, vui lòng kiểm tra lại</string>
    <string name="tuy_chon">Tùy chọn</string>
    <string name="thong_tin_ca_nhan">Thông tin cá nhân</string>
    <string name="vui_long_nhap_du_thong_tin">Vui lòng nhập đầy đủ thông tin</string>
    <string name="mat_khau_hien_tai_khong_chinh_xac">Mật khẩu hiện tại không chính xác</string>
    <string name="mat_khau_moi_phai_du_8_ky_tu">Mật khẩu mới phải đủ 8 ký tự</string>
    <string name="nhap_lai_mat_khau_khong_chinh_xac">Nhập lại mật khẩu không chính xác</string>
    <string name="bat_dau_thi">"Bắt đầu thi: "</string>
    <string name="diem_danh_sinh_vien">Điểm danh sinh viên</string>
    <string name="thong_tin_sinh_vien">Thông tin sinh viên</string>
    <string name="ho_va_ten">Họ và tên: </string>
    <string name="ma_sinh_vien">Mã sinh viên:</string>
    <string name="chung_minh_nhan_dan">Chứng minh nhân dân:</string>
    <string name="lop">Lớp:</string>
    <string name="khoa">Khoa:</string>
    <string name="mon_thi">Môn thi:</string>
    <string name="phong_thi">Phòng thi:</string>
    <string name="thoi_gian_thi_v2">"Thời gian thi: "</string>
    <string name="trag_thai">Trạng thái</string>
    <string name="xac_nhan_diem_danh_sinh_vien">Xác nhận điểm danh sinh viên</string>
    <string name="chua_diem_danh">Chưa điểm danh</string>
    <string name="da_diem_danh">Đã điểm danh</string>
    <string name="diem_danh">Điểm danh</string>
    <string name="ban_co_muon_diem_danh_sinh_vien">Xác nhận điểm danh sinh viên %s, mã sinh viên %s ?</string>
    <string name="diem_danh_sinh_vien_khong_thanh_cong">Điểm danh sinh viên không thành công.</string>
    <string name="diem_danh_sinh_vien_thanh_cong">Điểm danh sinh viên thành công.</string>
    <string name="dong_y">Đồng ý</string>
    <string name="dang_xuat">Đăng xuất</string>
    <string name="tin_tuc">Tin tức</string>
    <string name="diem_danh_cho_sinh_vien_thanh_cong">Bạn đã điểm danh cho sinh viên: %s, Mã sinh viên: %s thành công.</string>
    <string name="diem_danh_thanh_cong">Điểm danh thành công</string>
</resources>