<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/custom_round_corner_edittext"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="16dp"
            android:text="@string/doi_mat_khau"
            android:textColor="@color/colorBlue"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/nhap_mat_khau_cu"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/custom_round_corner_edittext"
            android:hint="Username"
            android:padding="16dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/nhap_mat_khau_moi"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/custom_round_corner_edittext"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:paddingRight="35dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/nhap_lai_mat_khau_moi"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/edt_again_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/custom_round_corner_edittext"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:paddingRight="35dp"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/custom_round_corner_button"
            android:text="@string/xac_nhan"
            android:textAllCaps="false"
            android:textColor="@color/colorWhile"
            android:textSize="13sp" />

    </LinearLayout>

</LinearLayout>