<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="student"
            type="com.example.informationrecognize.main.checkIn.checkInStudent.model.StudentModel" />

        <variable
            name="examRoom"
            type="com.example.informationrecognize.main.checkIn.mvvm.model.ClassItemModel" />

    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/ll_header"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_back_v5"
                android:padding="13dp"
                android:layout_marginLeft="10dp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_confirm_end_check_in"
                android:layout_centerHorizontal="true"
                image="@{student.getImageStudent()}"/>

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@+id/ll_header"
            android:id="@+id/nsv_view_infor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="5dp"
                    android:translationZ="5dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_margin="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/thong_tin_sinh_vien"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold"
                            android:textSize="14sp"/>

                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ho_va_ten"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{student.nameStudent}"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ma_sinh_vien"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{student.getIdStudent()}"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/chung_minh_nhan_dan"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{student.getIdPeople()}"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lop"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{student.getClassRoom()}"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/khoa"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{student.getBranch()}"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:elevation="5dp"
                    android:translationZ="5dp"
                    app:cardCornerRadius="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Thông tin môn thi"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorBlack"/>

                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/mon_thi"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{examRoom.getSubject()}"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/phong_thi"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{examRoom.getNameClass()}"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/thoi_gian_thi_v2"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="60p"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/thoi_gian_bat_dau"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                            <TextView
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{examRoom.startTime}"
                                android:textColor="@color/colorBlack"
                                android:textSize="13sp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginTop="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center_horizontal">

                            <ImageView
                                android:id="@+id/img_status"
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:text="@string/trag_thai"
                                android:src="@drawable/ic_yellow_round"
                                android:layout_gravity="center_vertical"/>

                            <TextView
                                android:id="@+id/tv_status"
                                android:layout_marginLeft="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Chưa điểm danh"
                                android:textStyle="bold"
                                android:textColor="@color/colorYellow"
                                android:textSize="17sp"/>

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_check_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/custom_round_corner_button"
            android:text="Điểm danh"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_margin="10dp"/>

    </RelativeLayout>

</layout>