<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        app:cardCornerRadius="5dp"
        android:elevation="5dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:translationZ="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Phòng thi: "
                        android:textColor="@color/colorBlue"
                        android:textSize="14sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_exam_room"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="327"
                        android:textColor="@color/colorBlue"
                        android:textSize="14sp"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dang_cho"
                    android:drawableLeft="@drawable/ic_watting"
                    android:drawablePadding="5dp"
                    android:textColor="#15D300"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Khóa: "
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tv_course"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="K58"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Khoa: "
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tv_branch"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Công nghệ thông tin"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorBlue"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thong_tin_phong_thi"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/si_so"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tv_number_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="50"
                        android:layout_marginLeft="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thoi_gian_thi"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tv_exam_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="60"
                        android:layout_marginLeft="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/thoi_gian_bat_dau"
                    android:textSize="14sp"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:id="@+id/tv_start_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="08:00:00 20/10/2020"
                    android:textColor="@color/colorBlue"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="4dp"/>

            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>